--- a/shelter/Views/Home/Index.cshtml
+++ b/shelter/Views/Home/Index.cshtml
@@ -3,6 +3,10 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Добро пожаловать в приют для животных "Светлый уголок"!</h1>
 </div>
+<h2 class="display-6">Описание</h2>
+<p>"Светлый уголок" - это уютный приют для животных, где каждое животное находит свой дом. Мы заботимся о бездомных животных, предоставляя им заботу, лечение, и поиск заботливых хозяев. Наша команда состоит из преданных волонтеров, которые делают все возможное для благополучия животных. </p>
+@* <h2 class="display-6">События приюта</h2>
+<h2 class="display-6">Отзывы</h2> *@
+    
