--- a/shelter/Views/Home/Privacy.cshtml
+++ b/shelter/Views/Home/Privacy.cshtml
@@ -3,4 +3,24 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<style>
+        .container {
+            margin-top: 50px;
+        }
+        .info {
+            margin-bottom: 20px;
+        }
+        h1 {
+            color: #333;
+        }
+    </style>
+    <div class="container">
+        <h1>Информация о приюте</h1>
+        <div class="info">
+            <p><strong>Название приюта:</strong> Светлый уголок</p>
+            <p><strong>Адрес:</strong> Ул. Зеленая, дом 10, город Солнечный</p>
+            <p><strong>Электронная почта:</strong> shelter@example.com</p>
+            <p><strong>Описание:</strong> "Светлый уголок" - это уютный приют для животных, где каждое животное находит свой дом. Мы заботимся о бездомных животных, предоставляя им заботу, лечение, и поиск заботливых хозяев. Наша команда состоит из преданных волонтеров, которые делают все возможное для благополучия животных.</p>
+            <p><strong>Телефон:</strong> +1 123-456-7890</p>
+        </div>
+    </div>
