--- a/shelter/Views/Shared/_Layout.cshtml
+++ b/shelter/Views/Shared/_Layout.cshtml
@@ -68,7 +68,7 @@
                                         </button>
                                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                             <li><a class="dropdown-item" asp-area="" asp-controller="ControllerName" asp-action="ActionName">Животные</a></li>
-                                            <li><a class="dropdown-item" asp-area="" asp-controller="ControllerName" asp-action="ActionName">Статусы животных</a></li>
+                                            <li><a class="dropdown-item" asp-area="" asp-controller="AnimalStatus" asp-action="Index">Статусы животных</a></li>
                                             <li><a class="dropdown-item" asp-area="" asp-controller="ControllerName" asp-action="ActionName">Гендер животных</a></li>
                                             <li><a class="dropdown-item" asp-area="" asp-controller="ControllerName" asp-action="ActionName">Вид животных</a></li>
                                             <li><a class="dropdown-item" asp-area="" asp-controller="ControllerName" asp-action="ActionName">Статус здоровья животных</a></li>
