--- a/shelter/Views/AnimalStatus/Create.cshtml
+++ b/shelter/Views/AnimalStatus/Create.cshtml
@@ -1,11 +1,11 @@
-﻿@model shelter.Models.AdoptionStatusViewModel
+﻿@model shelter.Models.AnimalStatusViewModel
 @{
     ViewData["Title"] = "Create";
 
 }
 <h1>Create</h1>
 
-<h4>AdoptionStatus</h4>
+<h4>AnimalStatus</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
