--- a/shelter/Views/Shared/_Layout.cshtml
+++ b/shelter/Views/Shared/_Layout.cshtml
@@ -80,7 +80,7 @@
                                         </button>
                                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                             <li><a class="dropdown-item" asp-area="" asp-controller="ControllerName" asp-action="ActionName">Приемы</a></li>
-                                            <li><a class="dropdown-item" asp-area="" asp-controller="ControllerName" asp-action="ActionName">Клиники</a></li>
+                                            <li><a class="dropdown-item" asp-area="" asp-controller="Clinic" asp-action="Index">Клиники</a></li>
                                             <li><a class="dropdown-item" asp-area="" asp-controller="ControllerName" asp-action="ActionName">Позиция</a></li>
                                             <li><a class="dropdown-item" asp-area="" asp-controller="ControllerName" asp-action="ActionName">Специализация</a></li>
                                             <li><a class="dropdown-item" asp-area="" asp-controller="ControllerName" asp-action="ActionName">Ветеринары</a></li>
