--- a/shelter/Views/Species/Edit.cshtml
+++ b/shelter/Views/Species/Edit.cshtml
@@ -1,11 +1,11 @@
-﻿@model shelter.Models.ClinicViewModel
+﻿@model shelter.Models.SpeciesViewModel
 @{
     ViewData["Title"] = "Edit";
 }
 
 <h1>Edit</h1>
 
-<h4>Clinic</h4>
+<h4>Species</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
