--- a/shelter/Views/Species/Create.cshtml
+++ b/shelter/Views/Species/Create.cshtml
@@ -1,24 +1,23 @@
-﻿@model shelter.Models.ClinicViewModel
+﻿@model shelter.Models.SpeciesViewModel
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Create";
+
 }
+<h1>Create</h1>
 
-<h1>Edit</h1>
-
-<h4>Clinic</h4>
+<h4>Species</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit" enctype="multipart/form-data">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Edit" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
