--- a/shelter/Views/Shared/_Layout.cshtml
+++ b/shelter/Views/Shared/_Layout.cshtml
@@ -69,7 +69,7 @@
                                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                             <li><a class="dropdown-item" asp-area="" asp-controller="ControllerName" asp-action="ActionName">Животные</a></li>
                                             <li><a class="dropdown-item" asp-area="" asp-controller="AnimalStatus" asp-action="Index">Статусы животных</a></li>
-                                            <li><a class="dropdown-item" asp-area="" asp-controller="Species" asp-action="Index">Гендер животных</a></li>
+                                            <li><a class="dropdown-item" asp-area="" asp-controller="Gender" asp-action="Index">Гендер животных</a></li>
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Species" asp-action="Index">Вид животных</a></li>
                                             <li><a class="dropdown-item" asp-area="" asp-controller="ControllerName" asp-action="ActionName">Статус здоровья животных</a></li>
                                         </ul>
