add status of health

--- a/shelter/Views/Shared/_Layout.cshtml
+++ b/shelter/Views/Shared/_Layout.cshtml
@@ -71,7 +71,7 @@
                                             <li><a class="dropdown-item" asp-area="" asp-controller="AnimalStatus" asp-action="Index">Статусы животных</a></li>
                                             <li><a class="dropdown-item" asp-area="" asp-controller="Gender" asp-action="Index">Гендер животных</a></li>
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Species" asp-action="Index">Вид животных</a></li>
-                                            <li><a class="dropdown-item" asp-area="" asp-controller="ControllerName" asp-action="ActionName">Статус здоровья животных</a></li>
+                                            <li><a class="dropdown-item" asp-area="" asp-controller="StatusOfHealth" asp-action="Index">Статус здоровья животных</a></li>
                                         </ul>
                                     </div>
                                     <div class="dropdown">
