--- a/shelter/Views/Shared/_Layout.cshtml
+++ b/shelter/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
                                             Животные
                                         </button>
                                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                            <li><a class="dropdown-item" asp-area="" asp-controller="ControllerName" asp-action="ActionName">Животные</a></li>
+                                            <li><a class="dropdown-item" asp-area="" asp-controller="Animal" asp-action="Index">Животные</a></li>
                                             <li><a class="dropdown-item" asp-area="" asp-controller="AnimalStatus" asp-action="Index">Статусы животных</a></li>
                                             <li><a class="dropdown-item" asp-area="" asp-controller="Gender" asp-action="Index">Гендер животных</a></li>
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Species" asp-action="Index">Вид животных</a></li>
