--- a/shelter/Views/Shared/_Layout.cshtml
+++ b/shelter/Views/Shared/_Layout.cshtml
@@ -93,7 +93,7 @@
                                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                             <li><a class="dropdown-item" asp-area="" asp-controller="ControllerName" asp-action="ActionName">Пользователи</a></li>
                                             <li><a class="dropdown-item" asp-area="" asp-controller="ControllerName" asp-action="ActionName">Пол пользователей</a></li>
-                                            <li><a class="dropdown-item" asp-area="" asp-controller="ControllerName" asp-action="ActionName">Пожертвования пользователей</a></li>
+                                            <li><a class="dropdown-item" asp-area="" asp-controller="Donation" asp-action="Index">Пожертвования пользователей</a></li>
                                             <li><a class="dropdown-item" asp-area="" asp-controller="ControllerName" asp-action="ActionName">Отзывы пользователей</a></li>
                                         </ul>
                                     </div>
@@ -121,7 +121,7 @@
                             {
                                 <div class = "dropdown-menu-group">
                                     <li class="nav-item">
-                                            <a class="nav-link text-dark btn btn-light" asp-area="" asp-controller="Account" asp-action="Register">Наши животные</a>
+                                            <a class="nav-link text-dark btn btn-light" asp-area="" asp-controller="" asp-action="Register">Наши животные</a>
                                     </li>
                                     <li class="nav-item">
                                             <a class="nav-link text-dark btn btn-light" asp-area="" asp-controller="Account" asp-action="Register">Заявки на усыновление</a>
