add adoption application for users

--- a/shelter/Views/Animal/Details.cshtml
+++ b/shelter/Views/Animal/Details.cshtml
@@ -11,7 +11,14 @@
     <div class="card-body">
         <div class="row">
             <div class="col-md-4">
-                <img src="@Model.Photo" alt="@Model.Name" class="img-fluid rounded mb-3" />
+                @if (!string.IsNullOrEmpty(Model.Photo))
+                {
+                    <img src="@Model.Photo" class="card-img-top" alt="Animal Image" style="max-width: 100%; height: auto;">
+                }
+                else
+                {
+                    <img src="~/img/avatar2.jpg" class="card-img-top" alt="Animal Image" style="max-width: 100%; height: auto;">
+                }
             </div>
             <div class="col-md-8">
                 <dl class="row">
@@ -40,10 +47,22 @@
         </div>
     </div>
     <div class="card-footer">
-        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary">Edit</a>
-        <form asp-action="Delete" asp-route-id="@Model.Id" class="d-inline">
-            <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete?')">Delete</button>
-        </form>
-        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+        @if(User.IsInRole("1"))
+        {
+            <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary">Edit</a>
+            <form asp-action="Delete" asp-route-id="@Model.Id" class="d-inline">
+                <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete?')">Delete</button>
+            </form>
+            <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+        }
+        else @if (User.IsInRole("2"))
+        {
+            <a asp-controller="AdoptionApplication" asp-action="Create" asp-route-id="@Model.Id" class="btn btn-primary" onclick="return confirm('Вы действительно хотите стать хозяином этого животного? Это большая ответственность и если вы не готовы, то нажмите Отмена')">Оставить заявку на усновление</a>
+            <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+        }
+        else
+        {
+            <dd class="col-sm-8">Что бы оставить заявку на усыновление <a asp-controller="Account" asp-action="Login">войдите</a> или <a asp-controller="Account" asp-action="Register" >зарегистрируйтесь</a> в системе</dd>
+        }
     </div>
 </div>
