--- a/shelter/Views/Shared/_Layout.cshtml
+++ b/shelter/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                         {
                             <div class = "dropdown-menu-group">
                                 <li class="nav-item">
-                                        <a class="nav-link text-dark btn btn-light" asp-area="" asp-controller="Account" asp-action="Register">Наши животные</a>
+                                        <a class="nav-link text-dark btn btn-light" asp-area="" asp-controller="Animal" asp-action="Index">Наши животные</a>
                                 </li>
                                     <li class="nav-item">
                                             <a class="nav-link text-dark btn btn-light" asp-area="" asp-controller="Account" asp-action="Register">Сотрудники приюта</a>
@@ -121,7 +121,7 @@
                             {
                                 <div class = "dropdown-menu-group">
                                     <li class="nav-item">
-                                            <a class="nav-link text-dark btn btn-light" asp-area="" asp-controller="" asp-action="Register">Наши животные</a>
+                                            <a class="nav-link text-dark btn btn-light" asp-area="" asp-controller="Animal" asp-action="Index">Наши животные</a>
                                     </li>
                                     <li class="nav-item">
                                             <a class="nav-link text-dark btn btn-light" asp-area="" asp-controller="Account" asp-action="Register">Заявки на усыновление</a>
