--- a/shelter/Views/Shared/_Layout.cshtml
+++ b/shelter/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
                                             Заявки
                                         </button>
                                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                            <li><a class="dropdown-item" asp-area="" asp-controller="ControllerName" asp-action="ActionName">Заявки</a></li>
+                                            <li><a class="dropdown-item" asp-area="" asp-controller="AdoptionApplication" asp-action="Index">Заявки</a></li>
                                             <li><a class="dropdown-item" asp-area="" asp-controller="AdoptionStatus" asp-action="Index">Статусы заявок</a></li>
                                         </ul>
                                     </div>
@@ -91,7 +91,7 @@
                                             Пользователи
                                         </button>
                                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                            <li><a class="dropdown-item" asp-area="" asp-controller="ControllerName" asp-action="ActionName">Пользователи</a></li>
+                                            <li><a class="dropdown-item" asp-area="" asp-controller="User" asp-action="Index">Пользователи</a></li>
                                             <li><a class="dropdown-item" asp-area="" asp-controller="ControllerName" asp-action="ActionName">Пол пользователей</a></li>
                                             <li><a class="dropdown-item" asp-area="" asp-controller="Donation" asp-action="Index">Пожертвования пользователей</a></li>
                                             <li><a class="dropdown-item" asp-area="" asp-controller="ControllerName" asp-action="ActionName">Отзывы пользователей</a></li>
