--- a/shelter/Views/AdoptionApplication/Edit.cshtml
+++ b/shelter/Views/AdoptionApplication/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model shelter.Models.AnimalViewModel
+﻿@model shelter.Models.AdoptionApplicationViewModel
 @{
     ViewData["Title"] = "Edit";
 }
@@ -9,71 +9,19 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit" enctype="multipart/form-data">
+        <form asp-action="Edit" asp-route-AnimalId="@Model.IdAnimal" asp-route-UserId="@Model.IdUser" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IdSpecies" class="control-label"></label>
-                <select asp-for="IdSpecies" class="form-control">
-                    @foreach (SpeciesViewModel kind in Model.speciesViewModels)
+                <label asp-for="IdStatus" class="control-label"></label>
+                <select asp-for="IdStatus" class="form-control">
+                    @foreach (AdoptionStatusViewModel kind in Model.adoptionStatusViewModels)
                     {
                         <option value="@kind.Id">@kind.Name</option>
                     }
                 </select>
             </div>
-            <div class="form-group">
-                <label asp-for="Age" class="control-label"></label>
-                <input asp-for="Age" class="form-control" />
-                <span asp-validation-for="Age" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IdGender" class="control-label"></label>
-                <select asp-for="IdGender" class="form-control">
-                    @foreach (GenderViewModel kind in Model.genderViewModels)
-                    {
-                        <option value="@kind.Id">@kind.Name</option>
-                    }
-                </select>
-            </div>
-            <div class="form-group">
-                <label asp-for="DescriptionOfAnimal" class="control-label"></label>
-                <input asp-for="DescriptionOfAnimal" class="form-control" />
-                <span asp-validation-for="DescriptionOfAnimal" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Photo" class="control-label"></label>
-                <input asp-for="Photo" type="file" class="form-control" name="imageFile" accept="image/*" />
-                <span asp-validation-for="Photo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IdAnimalStatus" class="control-label"></label>
-                <select asp-for="IdAnimalStatus" class="form-control">
-                    @foreach (AnimalStatusViewModel kind in Model.animalStatusViewModels)
-                    {
-                        <option value="@kind.Id">@kind.Name</option>
-                    }
-                </select>
-            </div>
-            <div class="form-group">
-                <label asp-for="DateOf" class="control-label"></label>
-                <input asp-for="DateOf" type="date" class="form-control" />
-                <span asp-validation-for="DateOf" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IdStatusOfHealth" class="control-label"></label>
-                <select asp-for="IdStatusOfHealth" class="form-control">
-                    @foreach (StatusOfHealthViewModel kind in Model.statusOfHealthViewModels)
-                    {
-                        <option value="@kind.Id">@kind.Name</option>
-                    }
-                </select>
-            </div>
-            <div class="form-group">
+                        <div class="form-group">
                 <input type="submit" value="Edit" class="btn btn-primary" />
             </div>
         </form>
