--- a/shelter/Views/Gender/Index.cshtml
+++ b/shelter/Views/Gender/Index.cshtml
@@ -21,7 +21,7 @@
                 <td>@Html.DisplayFor(modelItem => item.Name)</td>
                 <td class="actions">
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-action="Delete" asp-route-id="@item.Id" onclick="return confirm('Are you sure you want to delete?')">Delete</a>
                 </td>
             </tr>
         }
